# OptimizationWorkflow

./: .coverage  README.md  pyproject.toml
configs/experiments/: mnist_cnn.json
scripts/: make_mnist_tiny.py
scripts/tuning/: apply_best_optimizers.py  run_grid.py  run_random_search.py
src/: __init__.py
src/benchmarks/: __init__.py  animate.py  checks.py  legacy_runner.py  metrics.py  plotting.py  registry.py  report.py  runner.py  workflow.py
src/core/: __init__.py  logging.py  protocols.py  rng.py  types.py
src/distributed/: __init__.py  communicator.py  strategies.py  topology.py  weights.py
src/environments/: __init__.py  base.py  gossip.py  single_process.py
src/experiments/: __init__.py  base_training.py  config.py  plotting.py  utils.py
src/models/: __init__.py  numpy_vector.py  torch_adapter.py  torch_nets.py
src/optim/: __init__.py  adam.py  constraints.py  frank_wolfe.py  gradient_descent.py  legacy_frankwolfe.py  muon.py  scion.py  stochastic_frank_wolfe.py  torch_gd.py
src/tasks/: __init__.py  logistic_regression.py  mnist.py  synthetic_quadratic.py
src/trainers/: __init__.py  supervised.py
tests/: __init__.py  test_animation.py  test_checks_suite.py  test_frank_wolfe.py  test_gossip_environment.py  test_gradient_descent.py  test_logistic_regression_task.py  test_single_process_environment.py  test_synthetic_quadratic.py  test_visual_reports.py  test_workflow_runner.py
tests/benchmarks/: __init__.py  test_animation.py  test_animation_coverage.py  test_checks_edge_cases.py  test_checks_suite.py  test_metrics_edges.py  test_plotting_full_coverage.py  (+8 more)
(+1391 files in other folders)
