[project]
name = "gossip-fw-bench"
version = "0.1.0"
description = "Benchmark framework for Frank-Wolfe and gossip distributed optimization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio>=2.37.2",
    "matplotlib>=3.10.8",
    "numpy>=1.24",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/environments", "src/models", "src/tasks", "src/optim", "src/distributed", "src/benchmarks"]

# Enable editable installs with proper src-layout
[tool.hatch.build.targets.editable]
packages = ["src/core", "src/environments", "src/models", "src/tasks", "src/optim", "src/distributed", "src/benchmarks"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
no_implicit_optional = true
# Allow subclassing Any for numpy compatibility
disallow_subclassing_any = false
# Use the installed package, not the src directory directly
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
